--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
         <p>Điểm của bạn: <span id="finalScore">0</span></p>
         <button id="restartBtn">Chơi lại</button>
       </div>
+
+      <!-- On-screen controls -->
+      <div id="controls" class="controls" aria-hidden="false">
+        <div id="joystick" class="joystick" aria-label="Cần điều khiển">
+          <div class="joy-bg"></div>
+          <div class="joy-stick"></div>
+        </div>
+
+        <button id="fireBtn" class="fire-btn" aria-label="Bắn" title="Bắn">🔫</button>
+      </div>
     </div>
 
     <script src="game.js"></script>
