--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       </div>
       <div class="right">
         <span>HP:</span>
-        <div class="hpbar" aria-label="HP" role="progressbar" aria-valuemin="0" aria-valuemax="3" aria-valuenow="3">
+        <div class="hpbar" aria-label="HP" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="100">
           <div id="hpFill" class="hpbar-fill" style="width: 100%;"></div>
         </div>
       </div>
@@ -41,6 +41,7 @@
           <div class="joy-stick"></div>
         </div>
 
+        <button id="mgBtn" class="mg-btn" aria-label="Súng máy" title="Súng máy (phím 1)">🔫×2</button>
         <button id="fireBtn" class="fire-btn" aria-label="Bắn" title="Bắn">🔫</button>
       </div>
     </div>
