--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 
       <div id="overlay" class="overlay">
         <h1 id="title">Hạm Đội Xuất Kích</h1>
-        <p>Nhấn và giữ phím Space để bắn.</p>
         <button id="startBtn">Bắt đầu</button>
       </div>
 
@@ -40,7 +39,7 @@
           <div class="joy-bg"></div>
           <div class="joy-stick"></div>
         </div>
-        <button id="mgBtn" class="mg-btn" aria-label="Súng máy" title="Súng máy (phím 1)">🔫×2</button>
+        <button id="mgBtn" class="mg-btn" aria-label="Súng máy" title="Súng máy">🔫×2</button>
         <button id="fireBtn" class="fire-btn" aria-label="Bắn" title="Bắn">🔫</button>
       </div>
     </div>
