--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div class="joy-bg"></div>
           <div class="joy-stick"></div>
         </div>
-        <button id="mgBtn" class="mg-btn" aria-label="Súng máy" title="Súng máy">🔫×2</button>
+        <button id="mgBtn" class="mg-btn" aria-label="Ngưng động thời gian" title="Ngưng động thời gian">⏳×3</button>
         <button id="fireBtn" class="fire-btn" aria-label="Bắn" title="Bắn">🔫</button>
       </div>
     </div>
