--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <div id="overlay" class="overlay">
         <h1 id="title">Hạm Đội Xuất Kích</h1>
         <button id="startBtn">Bắt đầu</button>
+        <p id="ultInfo">Chọn kỹ năng tối thượng: [1] Tên lửa truy đuổi • [2] Ngưng động thời gian</p>
       </div>
 
       <div id="gameover" class="overlay hidden">
@@ -39,7 +40,8 @@
           <div class="joy-bg"></div>
           <div class="joy-stick"></div>
         </div>
-        <button id="mgBtn" class="mg-btn" aria-label="Ngưng động thời gian" title="Ngưng động thời gian">⏳×3</button>
+        <button id="missileBtn" class="missile-btn" aria-label="Tên lửa truy đuổi (Phím 1)" title="Tên lửa truy đuổi (Phím 1)">🚀</button>
+        <button id="mgBtn" class="mg-btn" aria-label="Ngưng động thời gian (Phím 2)" title="Ngưng động thời gian (Phím 2)">⏳</button>
         <button id="fireBtn" class="fire-btn" aria-label="Bắn" title="Bắn">🔫</button>
       </div>
     </div>
