--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
           <h2>Căn Cứ</h2>
           <p>Xu: <span id="coins">0</span></p>
           <div class="mode-grid">
-            <button id="upHP">Nâng cấp Máu (+20) - 5 xu</button>
-            <button id="upDEF">Nâng cấp Phòng thủ (+1) - 5 xu</button>
-            <button id="upDMG">Nâng cấp Sát thương (+3 chính, +1 đệ tử) - 5 xu</button>
-            <button id="upDisc">Nâng cấp Đệ tử (+1 đệ tử, +1 tốc độ) - 2 xu</button>
+            <button id="upSPD">Nâng cấp tốc độ (10 xu)</button>
+            <button id="upHP">Nâng cấp máu (3 xu)</button>
+            <button id="upCOL">Nâng cấp thu gom (30 xu)</button>
+            <button id="upEXP">Nâng cấp kinh nghiệm (15 xu)</button>
+            <button id="upDisc">Nâng cấp đệ tử (50 xu)</button>
+            <button id="upDEF">Nâng cấp phòng thủ (5 xu)</button>
           </div>
           <button id="toModeSelect">Chọn trận</button>
           <button id="baseBack">Quay lại</button>
